syntax = "proto3";
package dht.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "dht/v1/model.proto";

option go_package = "github.com/nesaorg/nesachain/x/dht/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "nesachain/x/dht/Params";
  option (gogoproto.equal) = true;

  google.protobuf.Duration orchestrator_valid_time = 1 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true
  ];

  google.protobuf.Duration miner_valid_time = 2 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true
  ];

  string admin_account = 3 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  cosmos.base.v1beta1.Coin orchestrator_min_deposit = 4
      [ (gogoproto.nullable) = false ];

  cosmos.base.v1beta1.Coin miner_min_deposit = 5
      [ (gogoproto.nullable) = false ];

  google.protobuf.Duration orchestrator_unbonding_period = 6
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];

  google.protobuf.Duration miner_unbonding_period = 7
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];

  string label_admin_account = 8
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string reputation_admin_account = 9
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  repeated string price_token_denoms = 10;
  TokenPrice model_default_token_price = 11;
}